# selt-model-plugin

./: LICENSE  README.md  pyproject.toml  seltModel.gaphor
example/: template_class_13_11.gaphor
seltModelPlugin/: __init__.py  c4model.py  icon_loader.py  iconname.py  modelinglanguage.py  propertypages.py  propertypages.ui  toolbox.py
seltModelPlugin/diagramitems/: __init__.py  container.py  dependency.py  person.py  seltFile.py
seltModelPlugin/icons/: icons.gresource.xml
seltModelPlugin/icons/resource/: icons.gresource
seltModelPlugin/observer/: __init__.py  updatefilesmetadata.py
seltModelPlugin/tableexport/: __init__.py  tableexport.py
seltmodelplugin/: __init__.py  icon_loader.py  iconname.py  propertypages.py  toolbox.py  toolbox_copy_2.py
seltmodelplugin/diagramitems/: person.py  seltFile.py
seltmodelplugin/icons/: icons.gresource.xml
seltmodelplugin/observer/: __init__.py  updatefilesmetadata.py
seltmodelplugin/tableexport/: __init__.py  tableexport.py
